[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/UI/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://Fonts/FontNormal.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/UI/SettingsPage.tscn" type="PackedScene" id=3]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonPressed.tres" type="StyleBox" id=4]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonHover.tres" type="StyleBox" id=5]
[ext_resource path="res://Art/UI/ButtonStyles/ButtonNormal.tres" type="StyleBox" id=6]
[ext_resource path="res://Art/UI/hover.png" type="Texture" id=7]
[ext_resource path="res://Scenes/UI/OpponentList.tscn" type="PackedScene" id=8]

[node name="PauseMenu" type="Control"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = 20.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MouseDisable" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1024.0
margin_top = -1024.0
margin_right = 984.0
margin_bottom = 984.0
rect_min_size = Vector2( 2048, 2048 )
color = Color( 0.313726, 0.0509804, 0.698039, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -75.0
margin_top = -75.0
margin_right = 85.0
margin_bottom = 110.0
texture = ExtResource( 7 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -69.4055
margin_top = -85.204
margin_right = 74.5945
margin_bottom = 114.796
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="VBoxContainer"]
margin_right = 144.0
margin_bottom = 23.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Back"

[node name="OpponentsButton" type="Button" parent="VBoxContainer"]
margin_top = 33.0
margin_right = 144.0
margin_bottom = 56.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Opponents"

[node name="ChangeDeckButton" type="Button" parent="VBoxContainer"]
margin_top = 66.0
margin_right = 144.0
margin_bottom = 89.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Change Deck"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 99.0
margin_right = 144.0
margin_bottom = 122.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Settings"

[node name="ConcedeButton" type="Button" parent="VBoxContainer"]
margin_top = 132.0
margin_right = 144.0
margin_bottom = 155.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Concede"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 165.0
margin_right = 144.0
margin_bottom = 188.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Restart"

[node name="MainMenuButton" type="Button" parent="VBoxContainer"]
margin_top = 198.0
margin_right = 144.0
margin_bottom = 221.0
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 4 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "To Main Menu"

[node name="SettingsPage" parent="." instance=ExtResource( 3 )]
visible = false

[node name="OpponentList" parent="." instance=ExtResource( 8 )]
visible = false

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="onBackPressed"]
[connection signal="pressed" from="VBoxContainer/OpponentsButton" to="." method="onOpponentsPressed"]
[connection signal="pressed" from="VBoxContainer/ChangeDeckButton" to="." method="onChangeDeckPressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="onSettingsButtonClicked"]
[connection signal="pressed" from="VBoxContainer/ConcedeButton" to="." method="onConcedePressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="onRestartPressed"]
[connection signal="pressed" from="VBoxContainer/MainMenuButton" to="." method="onMainMenuPressed"]
[connection signal="settingsClose" from="SettingsPage" to="." method="onSettingsClose"]
[connection signal="close" from="OpponentList" to="." method="onOpponentsClose"]
